apps/readeck/overlays/understairs/deployment.patch.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: readeck
  namespace: readeck
spec:
  template:
    spec:
      containers:
        - name: readeck
