apps/readeck/overlays/understairs/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: readeck
  namespace: readeck
spec:
  parentRefs:
    - name: external
      namespace: envoy-gateway-system
  hostnames:
    - reader.homelab.blacksd.tech
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: readeck
          port: 80
